@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-21T01:51:56Z",
+  "timestamp" : "2022-07-21T08:23:30Z",
   "count_outdated" : 2259,
   "uniques_outdated" : 494,
   "count" : 2307,
-  "uniques" : 520,
+  "uniques" : 521,
   "clones" : [
     {
       "timestamp": "2022-07-07T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
